authentication problem resolved

--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -6,7 +6,7 @@
 <body>
      
         
-<form action="/" enctype="multipart/form-data" method="post">
+<form action="/api/routes/auth" enctype="multipart/form-data" method="post">
     <input type="file" name="upload" multiple>
     <input type="submit" value="Upload">
 </form>
