Image recognition working

--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -87,7 +87,7 @@
           <div id="test1" class="col s12 center-align">
 
             <br>
-            <form action="/api/routes/admin/createClass" method="post">
+            <form action="/api/routes/admin/recog" method="post">
               <div class="row">
 
                 <div class="input-field col s2">
