--- a/views/fileUpload.ejs
+++ b/views/fileUpload.ejs
@@ -15,7 +15,6 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
- 
   <title>
     <%=username %> Dashboard</title>
 
@@ -62,36 +61,31 @@
     <div class="col s12 m8 offset-m2 l8 offset-l2">
       <div class="card">
         <div class="card-content text-responsive center-align orange lighten-2">
-          <p>Select the action you want to perform</p>
+          <p>   <strong>
+                <%=student %>
+              </strong></p>
         </div>
         <div class="row">
           <div class="col s12">
             <ul class="tabs">
 
-              <li class="tab col s4">
+              <li class="tab col s12">
                 <a href="#test1">Upload Scripts</a>
               </li>
-              <li class="tab col s4">
-                <a href="#test4">Teacher Credentials</a>
-              </li>
-              <li class="tab col s4">
-                <a href="#test5">Student Credentials</a>
-              </li>
-
-
-
             </ul>
           </div>
 
           <div id="test1" class="col s12 center-align">
 
             <br>
-            <form action="/api/routes/admin/recog" method="post" enctype="multipart/form-data">
+            <form action="/api/routes/admin/fileUpload" method="post" enctype="multipart/form-data">
 
               <div class="row ">
                 <div class="text-responsive center-align lighten-2">
 
-                    <p class="center-align">Select the first Page of answer script</p>
+                    <p class="center-align">Select all the pages of the answer script</p>
+                    <br>
+                    <p class="center-align">Name them as 1.png , 2.png and so on</p>
                 </div>
              
               </div>
@@ -123,90 +117,7 @@
       
 
 
-          <div id="test4" class="col s12 center-align">
-
-
-
-
-            <form action="/api/routes/admin/teacherAuth" method="post">
-              <div class="row ">
-                <br>
-                <div class="input-field col s3">
-                  <input id="date" type="text" name='id' required>
-                  <label for="date">Teacher Id</label>
-                </div>
-
-                <div class="input-field col s3">
-                  <input id="class_" type="text" name='username' required>
-                  <label for="class_">Teacher Username</label>
-                </div>
-
-                <div class="input-field col s3">
-                  <input id="class_" type="text" name='name' required>
-                  <label for="class_">Teacher Name</label>
-                </div>
-
-                <div class="input-field col s3">
-                  <input id="subject" type="text" name='password' required>
-                  <label for="subject">Password</label>
-                </div>
-
-              </div>
-
-              <div class="row">
-                <div class="input-field col s12">
-                  <input class="btn waves-effect hoverable" type='submit' value='Enter Teacher Data'>
-                </div>
-              </div>
-
-            </form>
-
-
-          </div>
-
-
-          <div id="test5" class="col s12 center-align">
-
-
-            <form action="/api/routes/admin/studentAuth" method="post">
-              <div class="row ">
-                <br>
-                <div class="input-field col s3">
-                  <input id="date" type="text" name='id' required>
-                  <label for="date">Student Id</label>
-                </div>
-
-                <div class="input-field col s3">
-                  <input id="class_" type="text" name='username' required>
-                  <label for="class_">Student Username</label>
-                </div>
-
-                <div class="input-field col s3">
-                  <input id="class_" type="text" name='name' required>
-                  <label for="class_">Student Name</label>
-                </div>
-
-                <div class="input-field col s3">
-                  <input id="subject" type="text" name='password' required>
-                  <label for="subject">Password</label>
-                </div>
-
-              </div>
-
-              <div class="row">
-                <div class="input-field col s12">
-                  <input class="btn waves-effect hoverable" type='submit' value='Enter Student Data'>
-                </div>
-              </div>
-
-            </form>
-
-
-
-
-          </div>
-
-
+         
 
         </div>
 
