student dashboard complete

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -11,6 +11,7 @@
     <script src="index.js"></script>
 </head>
 <body>
+        <h1><%=username %> <%=teacher %> </h1>
 <input type="text" id="msg" placeholder="text"><br>
 <input type="submit" value="send" id="send">
 <ul id="chat">
