--- a/views/studentDashboard.ejs
+++ b/views/studentDashboard.ejs
@@ -93,9 +93,9 @@
           </div>
 
 
-            <div id="test5">Live Session<br>
+            <div id="test5">Live Session <br><br><br>
 
-              <form    action="/session" method="post">
+              <form    action="/api/routes/student/session" method="post">
                 <div class="row">
               
                   <div class="input-field col s12">
