--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,22 +1,295 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="socket.io/socket.io.js"></script>
-    <script
-            src="https://code.jquery.com/jquery-3.2.1.js"
-            integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-            crossorigin="anonymous"></script>
-    <script src="index.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+  <script src="/../../socket.io/socket.io.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="/../../style1.css">
+ 
+  <title>
+    <%=username %> Dashboard</title>
+
 </head>
+
 <body>
-        <h1><%=username %> <%=teacher %> </h1>
-<input type="text" id="msg" placeholder="text"><br>
-<input type="submit" value="send" id="send">
-<ul id="chat">
 
-</ul>
+  <div id="particles-js"></div>
+  <nav>
+    <div class="nav-wrapper">
+      <span href="#!" style="margin-left: 10px">You are logged in as
+        <strong id="userName"><%=username %></strong>
+      </span>
 
+      <a href="#" data-activates="mobile-demo" class="button-collapse">
+        <i class="material-icons">menu</i>
+      </a>
+      <ul class="right hide-on-med-and-down">
+
+        <li>
+          <a>
+
+            <a href="/api/routes/auth/logout">Logout</a>
+          </a>
+
+        </li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li>
+          <a>
+
+            <a href="/api/routes/auth/logout">Logout</a>
+          </a>
+
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+
+  <div class="row" style="opacity: 0.9">
+    <div class="col s12 m8 offset-m2 l8 offset-l2">
+
+            <h1><%=username %> <%=teacher %> </h1>
+            <input type="text" id="msg" placeholder="text"><br>
+            <input type="submit" value="send" id="send">
+            <ul id="chat">
+            
+            </ul>
+
+
+            <div class="chatbox">
+                    <div class="chatlogs">
+                        <div class="chat friend">
+                            <div class="user-photo"></div>
+                            <p class="chat-message">What's up, Brother ..!!</p>	
+                        </div>
+                        <div class="chat friend">
+                            <div class="user-photo"></div>
+                            <p class="chat-message">What's up, Brother ..!!</p>	
+                        </div>
+                        <div class="chat self">
+                            <div class="user-photo"></div>
+                            <p class="chat-message">What's up ..!!</p>	
+                        </div>
+                        <div class="chat self">
+                            <div class="user-photo"></div>
+                            <p class="chat-message">A única área que eu acho, que vai exigir muita atenção nossa, e aí eu já aventei a hipótese de até criar um ministério. É na área de... Na área... Eu diria assim, como uma espécie de analogia com o que acontece na área agrícola.</p>	
+                        </div>
+                        <div class="chat friend">
+                            <div class="user-photo"></div>
+                            <p class="chat-message">No meu xinélo da humildade eu gostaria muito de ver o Neymar e o Ganso. Por que eu acho que.... 11 entre 10 brasileiros gostariam. Você veja, eu já vi, parei de ver. Voltei a ver, e acho que o Neymar e o Ganso têm essa capacidade de fazer a gente olhar.
+            
+                            Todos as descrições das pessoas são sobre a humanidade do atendimento, a pessoa pega no pulso, examina, olha com carinho. Então eu acho que vai ter outra coisa, que os médicos cubanos trouxeram pro brasil, um alto grau de humanidade.
+                            </p>	
+                        </div>
+                    </div>
+                    <div class="chat-form">
+                        <textarea></textarea>
+                        <button>Send</button>
+                    </div>
+                </div>
+            
+                
+            
+     
+  </div>
+  </div>
+  </div>
+
+
+  <footer class="page-footer " style="position:fixed; left: 0;bottom: 0;width: 100%;">
+
+    <div class="footer-copyright">
+      <div class="container">
+        <p class="grey-text text-lighten-4 right">Designed and Developed By         
+          <strong>Satyajeet Singh</strong>
+        </p>
+      </div>
+    </div>
+  </footer>
+
+
+
+
+
+  <!-- 
+
+      <h1 id="hello"><%=username %></h1>
+      <input id="text" type="text" value="hello" style="width:80%" /><br />
+      <div id="qrcode" style="width:100px; height:100px; margin-top:15px;"></div> -->
+
+
+
+
+
+
+
+
+
+
+
+  <br>
 </body>
+
+<script> $(".button-collapse").sideNav();</script>
+<script type="text/javascript" src="/javascript/particles.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/../../index.js"></script>
+<script type="text/javascript" src="/dashboard.js"></script>
+
+
+<style>
+  #particles-js {
+
+    background-image: linear-gradient(to right, #434343 0%, #000000 100%);
+    ;
+    /* #01013e */
+    /* background: url("http://www.vlime.co.nz/images/buttons/backgroundimage.jpg");
+    background-attachment: fixed;
+    background-size: cover; */
+    z-index: -50;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+  }
+</style>
+<script>
+
+
+  particlesJS('particles-js',
+
+    {
+      "particles": {
+        "number": {
+          "value": 100,
+          "density": {
+            "enable": true,
+            "value_area": 800
+          }
+        },
+        "color": {
+          "value": "#ffffff"
+        },
+        "shape": {
+          "type": "triangle",
+          "stroke": {
+            "width": 0,
+            "color": "#000000"
+          },
+          "polygon": {
+            "nb_sides": 5
+          },
+          "image": {
+            "src": "img/github.svg",
+            "width": 100,
+            "height": 100
+          }
+        },
+        "opacity": {
+          "value": 0.5,
+          "random": false,
+          "anim": {
+            "enable": false,
+            "speed": 1,
+            "opacity_min": 0.1,
+            "sync": false
+          }
+        },
+        "size": {
+          "value": 5,
+          "random": true,
+          "anim": {
+            "enable": false,
+            "speed": 40,
+            "size_min": 0.1,
+            "sync": false
+          }
+        },
+        "line_linked": {
+          "enable": true,
+          "distance": 50,
+          "color": "#ffffff",
+          "opacity": 0.4,
+          "width": 1
+        },
+        "move": {
+          "enable": true,
+          "speed": 6,
+          "direction": "none",
+          "random": false,
+          "straight": false,
+          "out_mode": "out",
+          "attract": {
+            "enable": false,
+            "rotateX": 600,
+            "rotateY": 1200
+          }
+        }
+      },
+      "interactivity": {
+        "detect_on": "canvas",
+        "events": {
+          "onhover": {
+            "enable": false,
+            "mode": "repulse"
+          },
+          "onclick": {
+            "enable": false,
+            "mode": "push"
+          },
+          "resize": true
+        },
+        "modes": {
+          "grab": {
+            "distance": 400,
+            "line_linked": {
+              "opacity": 1
+            }
+          },
+          "bubble": {
+            "distance": 400,
+            "size": 40,
+            "duration": 2,
+            "opacity": 8,
+            "speed": 3
+          },
+          "repulse": {
+            "distance": 200
+          },
+          "push": {
+            "particles_nb": 4
+          },
+          "remove": {
+            "particles_nb": 2
+          }
+        }
+      },
+      "retina_detect": true,
+      "config_demo": {
+        "hide_card": false,
+        "background_color": "#b61924",
+        "background_image": "",
+        "background_position": "50% 50%",
+        "background_repeat": "no-repeat",
+        "background_size": "cover"
+      }
+    }
+
+  );
+
+
+</script>
+
 </html>
