realtime chat and drawing working

--- a/views/studentDashboard.ejs
+++ b/views/studentDashboard.ejs
@@ -95,7 +95,7 @@
 
             <div id="test5">Live Session <br><br><br>
 
-              <form    action="/api/routes/student/session" method="post">
+              <form    action="/session" method="post">
                 <div class="row">
               
                   <div class="input-field col s12">
