--- a/views/studentDashboard.ejs
+++ b/views/studentDashboard.ejs
@@ -97,9 +97,14 @@
               <form    action="/session" method="post">
                 <div class="row">
               
-                  <div class="input-field col s12">
+                  <div class="input-field col s6">
                     <input id="date" type="text" name='tname' required>
-                    <label for="date">Teacher Name</label>
+                    <label for="Teacher Name">Teacher Name</label>
+                  </div>
+
+                  <div class="input-field col s6">
+                    <input id="date" type="text" name='page' required>
+                    <label for="Page">Doubt Page</label>
                   </div>
                
               
