--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -31,14 +31,12 @@
           text-align: center;
           line-height: 75px;          
         }
-
         @media (max-width: 800px) {
           .flex-container {
         flex: 50%;
         max-width: 100%;
     }
 }
-
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media (max-width: 600px) {
   .flex-container {
@@ -48,7 +46,110 @@
 }
         </style>
 
+      <style>
+        .chatbox {
+	width: 500px;
+	min-width: 390px;
+	height: 600px;
+	background: #fff;
+	padding: 25px;
+	margin: 20px auto;
+	box-shadow: 0 3px #ccc;
+}
 
+.chatlogs {
+	padding: 10px;
+	width: 100%;
+	height: 450px;
+	overflow-x: hidden;
+	overflow-y: scroll;
+}
+
+.chatlogs::-webkit-scrollbar {
+	width: 10px;
+}
+
+.chatlogs::-webkit-scrollbar-thumb {
+	border-radius: 5px;
+	background: rgba(0,0,0,.1);
+}
+
+.chat {
+	display: flex;
+	flex-flow: row wrap;
+	align-items: flex-start;
+	margin-bottom: 10px;
+}
+
+
+.chat .user-photo {
+	width: 60px;
+	height: 60px;
+	background: #ccc;
+	border-radius: 50%;
+}
+
+.chat .chat-message {
+	width: 80%;
+	padding: 15px;
+	margin: 5px 10px 0;
+	border-radius: 10px;
+	color: #fff;
+	font-size: 20px;
+}
+
+.friend .chat-message {
+	background: #1adda4;
+}
+
+.self .chat-message {
+	background: #1ddced;
+	order: -1;
+}
+
+.chat-form {
+	margin-top: 20px;
+	display: flex;
+	align-items: flex-start;
+}
+
+.chat-form textarea {
+	background: #fbfbfb;
+	width: 75%;
+	height: 50px;
+	border: 2px solid #eee;
+	border-radius: 3px;
+	resize: none;
+	padding: 10px;
+	font-size: 18px;
+	color: #333;
+}
+
+.chat-form textarea:focus {
+	background: #fff;
+}
+
+.chat-form button {
+	background: #1ddced;
+	padding: 5px 15px;
+	font-size: 30px;
+	color: #fff;
+	border: none;
+	margin: 0 10px;
+	border-radius: 3px;
+	box-shadow: 0 3px 0 #0eb2c1;
+	cursor: pointer;
+
+	-webkit-transaction: background .2s ease;
+	-moz-transaction: backgroud .2s ease;
+	-o-transaction: backgroud .2s ease;
+}
+
+.chat-form button:hover {
+	background: #13c8d9;
+}
+      
+      </style>
      
 </head>
 <body>
@@ -82,25 +183,29 @@
 
 
           </div>
-          <div style="overflow:hidden;">
+          <div>
               
   
-    <h1 id="username"><%=username%></h1>
-    <h1 id="teacher"><%=teacher%></h1>
-  <input type="text" id="msg" placeholder="text"><br>
-  <input type="submit" value="send" id="send">
-  <ul id="chat" style="overflow:hidden;">
-
-      
-  </ul>
-
- 
+    <h1 style="display: none" id="username"><%=username%></h1>
+    <h1 style="display: none" id="teacher"><%=teacher%></h1>
 
 
+
+  <div style="background: #e53935 " class="chatbox">
+      <div class="chatlogs" id="chat">
+   
+     
+      </div>
+      <div class="chat-form">
+          <input type="text" id="msg" placeholder="Message">
+          
+        <input  type="submit" class="btn waves-effect waves-light"  value="Send" id="send">
+      </div>
+    </div>
           </div>
          
         </div>
-
+       
 <div class="row">
         
         <form action="/resolve" method="post">
@@ -165,7 +270,6 @@
 
 
 <style>
-
     #particles-js {
        
     background-image:linear-gradient(to right, #434343 0%,#000000 100%);; /* #01013e */
