frontend problems resolved

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -95,7 +95,7 @@
 	margin: 5px 10px 0;
 	border-radius: 10px;
 	color: #fff;
-	font-size: 20px;
+
 }
 
 .friend .chat-message {
@@ -183,7 +183,7 @@
 
 
           </div>
-          <div>
+          <div style="z-index: 100;">
               
   
     <h1 style="display: none" id="username"><%=username%></h1>
@@ -206,12 +206,12 @@
          
         </div>
        
-<div class="row">
+<div class="row" >
         
         <form action="/resolve" method="post">
-          <div class="row">
+          <div class="row" style="margin: auto;">
             <div class="input-field col s12">
-              <input class="btn waves-effect hoverable" type='submit' value='Resolve Doubt'>
+              <input class="btn waves-effect hoverable btn-large center-align" type='submit' value='Resolve Doubt'>
             </div>
           </div>
 
